--- a/app/src/main/res/layout/rem_item_view.xml
+++ b/app/src/main/res/layout/rem_item_view.xml
@@ -19,7 +19,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="DONE"
+            android:contentDescription="@string/show_status_text_view_text"
+            android:text="@string/show_status_text_view_text"
             android:textColor="@color/colorDoneLabel"
             android:textSize="24sp"
             android:textStyle="bold|italic"
@@ -27,7 +28,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/show_start_date_textView"
             app:layout_constraintTop_toTopOf="@+id/show_start_date_textView"
-            tools:text="STATUS" />
+            tools:text="@string/show_status_text_view_text" />
 
         <TextView
             android:id="@+id/finish_date_label_textView"
@@ -36,12 +37,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="FINISH DATE:"
+            android:contentDescription="@string/show_finish_date_label_text"
+            android:text="@string/show_finish_date_label_text"
             android:textColor="@color/colorButtonTextColor"
             android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_date_label_textView"
-            tools:text="FINISH DATE:" />
+            tools:text="@string/show_finish_date_label_text" />
 
         <TextView
             android:id="@+id/start_date_label_textView"
@@ -50,12 +52,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="START DATE:"
+            android:contentDescription="@string/show_start_date_label_text"
+            android:text="@string/show_start_date_label_text"
             android:textColor="@color/colorButtonTextColor"
             android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/show_kind_textView"
-            tools:text="START DATE:" />
+            tools:text="@string/show_start_date_label_text" />
 
         <TextView
             android:id="@+id/show_title_textView"
@@ -64,12 +67,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="TITLE"
-            android:text="TITLE"
+            android:contentDescription="@string/show_title_text_view_text"
+            android:text="@string/show_title_text_view_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toEndOf="@+id/show_kind_textView"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="TITLE" />
+            tools:text="@string/show_title_text_view_text" />
 
         <TextView
             android:id="@+id/show_kind_textView"
@@ -78,12 +81,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="KIND"
+            android:contentDescription="@string/show_kind_text_view_text"
+            android:text="@string/show_kind_text_view_text"
             android:textColor="@color/colorButtonTextColor"
             android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="KIND" />
+            tools:text="@string/show_kind_text_view_text" />
 
         <TextView
             android:id="@+id/show_start_date_textView"
@@ -91,12 +95,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:contentDescription="START DATE"
-            android:text="START DATE"
+            android:contentDescription="@string/show_date_text_view_text"
+            android:text="@string/show_date_text_view_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toEndOf="@+id/start_date_label_textView"
             app:layout_constraintTop_toTopOf="@+id/start_date_label_textView"
-            tools:text="START DATE" />
+            tools:text="@string/show_date_text_view_text" />
 
         <TextView
             android:id="@+id/show_finish_date_textView2"
@@ -104,12 +108,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:contentDescription="FINISH DATE"
-            android:text="FINISH DATE"
+            android:contentDescription="@string/show_date_text_view_text"
+            android:text="@string/show_date_text_view_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toEndOf="@+id/finish_date_label_textView"
             app:layout_constraintTop_toTopOf="@+id/finish_date_label_textView"
-            tools:text="FINISH DATE" />
+            tools:text="@string/show_date_text_view_text" />
 
         <TextView
             android:id="@+id/show_comment_textView"
@@ -118,13 +122,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="COMMENT"
-            android:text="COMMENT"
+            android:contentDescription="@string/show_comment_text_view_text"
+            android:text="@string/show_comment_text_view_text"
             android:textColor="@color/colorCommentTextColor"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@+id/show_title_textView"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="COMMENT" />
+            tools:text="@string/show_comment_text_view_text" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.LinearLayoutCompat>
