--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -16,15 +16,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:contentDescription="Activity title"
+        android:contentDescription="@string/activity_add_to_do_title_text"
         android:fontFamily="@font/archivo_black"
-        android:text="Add reminder"
+        android:text="@string/activity_add_to_do_title_text"
         android:textColor="@color/colorButtonTextColor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Add reminder" />
+        tools:text="@string/activity_add_to_do_title_text" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout3"
@@ -46,10 +46,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button_layout_not_pressed"
-            android:text="JOB"
+            android:contentDescription="@string/job_kind_button_text"
+            android:text="@string/job_kind_button_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="JOB" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/job_kind_button_text" />
 
         <Button
             android:id="@+id/button_home_reminder"
@@ -58,10 +60,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button_layout_not_pressed"
-            android:text="HOME"
+            android:contentDescription="@string/home_kind_button_text"
+            android:text="@string/home_kind_button_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toEndOf="@+id/button_Job_reminder"
-            tools:text="HOME" />
+            app:layout_constraintTop_toTopOf="@+id/button_Job_reminder"
+            tools:text="@string/home_kind_button_text" />
 
         <Button
             android:id="@+id/button_other_reminder"
@@ -72,11 +76,13 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:background="@drawable/button_layout_not_pressed"
-            android:text="OTHER"
+            android:contentDescription="@string/other_kind_button_text"
+            android:text="@string/other_kind_button_text"
             android:textColor="@color/colorButtonTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button_home_reminder"
-            tools:text="OTHER" />
+            app:layout_constraintTop_toTopOf="@+id/button_home_reminder"
+            tools:text="@string/other_kind_button_text" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -101,11 +107,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Start Date"
+        android:contentDescription="@string/start_date_label_text"
+        android:text="@string/start_date_label_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/spinner_select_to_do"
         app:layout_constraintTop_toBottomOf="@+id/spinner_select_to_do"
-        tools:text="Start Date" />
+        tools:text="@string/start_date_label_text" />
 
     <EditText
         android:id="@+id/editTextStartDate"
@@ -114,13 +121,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/date_text_field_text"
         android:ems="10"
         android:inputType="textPersonName|date"
-        android:text="1970/1/1"
+        android:text="@string/date_text_field_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewStartDayLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewStartDayLabel"
-        tools:text="1970/1/1" />
+        tools:text="@string/date_text_field_text" />
 
     <ImageView
         android:id="@+id/imageViewStartDatePicker"
@@ -142,11 +150,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
-        android:text="Finish Date"
+        android:contentDescription="@string/finish_date_label_text"
+        android:text="@string/finish_date_label_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextStartDate"
-        tools:text="Finish Date" />
+        tools:text="@string/finish_date_label_text" />
 
     <EditText
         android:id="@+id/editTextFinishDate"
@@ -155,13 +164,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/date_text_field_text"
         android:ems="10"
         android:inputType="textPersonName|date"
-        android:text="1970/1/1"
+        android:text="@string/date_text_field_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewFinishDayLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewFinishDayLabel"
-        tools:text="1970/1/1" />
+        tools:text="@string/date_text_field_text" />
 
     <ImageView
         android:id="@+id/imageViewFinishDatePicker"
@@ -184,11 +194,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
-        android:text="Short comment"
+        android:contentDescription="@string/comment_label_text"
+        android:text="@string/comment_label_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextFinishDate"
-        tools:text="Short comment" />
+        tools:text="@string/comment_label_text" />
 
     <Button
         android:id="@+id/buttonAddReminder"
@@ -212,12 +223,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/comment_text_field_text"
         android:ems="10"
         android:inputType="text"
-        android:text="Comment task..."
+        android:text="@string/comment_text_field_text"
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewTaskComment"
         app:layout_constraintTop_toBottomOf="@+id/textViewTaskComment"
-        tools:text="Comment task..." />
+        tools:text="@string/comment_text_field_text" />
 
 </android.support.constraint.ConstraintLayout>
